Bug 1317795 - Fix broken alignment of in-content UI checkboxes. r=jaws
MozReview-Commit-ID: 4JpOSYu3BZS

UltraBlame original commit: e241e4cec47a06af8d70054ccf2dddcd9b440d27

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -4507,6 +4507,29 @@ margin
 6px
 ;
 }
+html
+|
+*
+.
+toggle
+-
+container
+-
+with
+-
+text
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+}
 xul
 |
 radio
